css/style.css
/* ... */
.primary_input_field {
  display: block;
  padding: 1rem 0 1rem 2.25rem;
  background: rgba(217, 217, 217, 0.4);
  font-family: 'Roboto';
  font-weight: normal;
  font-size: 1.75rem;
  line-height: 1.1785714286;
  color: black;
  border-radius: 1.0625rem;
  max-width: 100%;
}
.primary_input_field::-moz-placeholder {
  text-transform: capitalize;
  font-family: 'Roboto';
  font-weight: normal;
  font-size: 1.75rem;
  line-height: 1.1785714286;
  color: rgba(0, 0, 0, 0.24);
}
.primary_input_field::placeholder {
  text-transform: capitalize;
  font-family: 'Roboto';
  font-weight: normal;
  font-size: 1.75rem;
  line-height: 1.1785714286;
  color: rgba(0, 0, 0, 0.24);
}

li {
  list-style: none;
}

.copy-message {
  position: fixed;
  z-index: 7;
  margin: auto;
  bottom: 3.75rem;
  padding: 12px 15px;
  left: 50%;
  transform: translateX(-50%);
  border-radius: 15px;
  background: rgba(0, 0, 0, 0.368627451);
  opacity: 0;
  transition: opacity 300ms ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  pointer-events: none;
}
.copy-message p {
  font-family: 'Roboto';
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.25;
  color: white;
  text-align: center;
}

.shown {
  opacity: 1;
}

.shaken {
  animation: shake 500ms linear 0s 1 forwards;
}

.raised {
  animation: raise 500ms linear 0s 1 forwards;
}

/*------------------------------ Header Start ------------------------------*/
header {
  padding-top: 4.875rem;
}
header div.center {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}
header div.center h1 {
  display: flex;
  align-items: center;
}
header div.center h1 a {
  display: inline-block;
  color: white;
  text-transform: capitalize;
  font-family: 'Outfit';
  font-weight: normal;
  font-size: 5.3125rem;
  line-height: 1.2588235294;
  text-align: left;
  white-space: nowrap;
  margin-left: 1.3125rem;
}
header div.center h1 a img {
  max-width: 15.6875rem;
  aspect-ratio: 1/1;
}
header div.center .authorization > button:not([data-profile-btn]) {
  width: 15.6875rem;
  padding: 0.75rem 0;
  font-family: 'Roboto';
  font-weight: normal;
  font-size: 2.5625rem;
  line-height: 1.1707317073;
}
header
  div.center
  .authorization
  > button:not([data-profile-btn])
  + button:not([data-profile-btn]) {
  margin-left: 1.3125rem;
}
header div.center .authorization > button[data-profile-btn] {
  text-indent: -999999px;
  display: inline-block;
  background: url('../images/profile.png') no-repeat;
  width: 6.25rem;
  height: 5.534375rem;
  overflow: hidden;
  margin: auto;
}
header div.center .authorization.authorized {
  position: relative;
}
header div.center .authorization.authorized > button:not([data-profile-btn]) {
  display: none;
}
header div.center .authorization:not(.authorized) button[data-profile-btn] {
  display: none;
}
header div.center .authorization div.dropdown_menu {
  overflow: hidden;
  position: absolute;
  width: auto;
  left: 50%;
  top: 6.25rem;
  transform: translateX(-50%);
  z-index: 7;
}
header div.center .authorization div.dropdown_menu ul {
  height: 0;
  transition: height 300ms ease-out;
}
header div.center .authorization div.dropdown_menu ul li {
  width: 18.8125rem;
}
header div.center .authorization div.dropdown_menu ul li a,
header div.center .authorization div.dropdown_menu ul li button {
  background: white;
  display: inline-block;
  font-family: 'Roboto';
  font-weight: normal;
  font-size: 2.375rem;
  line-height: 1.1842105263;
  text-transform: capitalize;
  text-align: center;
  width: 100%;
  padding: 1.125rem 0;
  transition: background 300ms ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
header div.center .authorization div.dropdown_menu ul li a:hover,
header div.center .authorization div.dropdown_menu ul li button:hover {
  background: #d0d0d0;
}
header div.center .authorization div.dropdown_menu.active ul {
  height: calc(5.0625rem * 3);
}
header div.modal_container {
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  z-index: 6;
}
header div.modal_container div[data-authorization-modal] {
  display: block;
  position: relative;
  background: white;
}
header div.modal_container div[data-authorization-modal] form {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  margin: 4.25rem 9.375rem auto 9.375rem;
  width: auto;
  max-width: 70%;
}
header div.modal_container div[data-authorization-modal] form fieldset legend {
  text-transform: capitalize;
  font-family: 'Outfit';
  font-weight: normal;
  font-size: 5.4375rem;
  line-height: 1.2643678161;
  color: #5299c7;
  width: 100%;
  text-align: center;
  margin-bottom: 4rem;
}
header div.modal_container div[data-authorization-modal] form label {
  display: none;
}
header
  div.modal_container
  div[data-authorization-modal]
  form
  input.primary_input_field {
  width: calc(100% - 2.25rem);
}
header
  div.modal_container
  div[data-authorization-modal]
  form
  input.primary_input_field
  + input {
  margin-top: 4rem;
}
header div.modal_container div[data-authorization-modal] form div.form__btns {
  display: flex;
  margin-top: 3.0625rem;
  margin-bottom: 5.3125rem;
  justify-content: space-between;
  width: 100%;
  flex-wrap: wrap-reverse;
}
header
  div.modal_container
  div[data-authorization-modal]
  form
  div.form__btns
  input {
  width: 11.875rem;
  padding: 0.875rem 0;
  border-radius: 0.5rem;
  font-family: 'Roboto';
  font-weight: normal;
  font-size: 2rem;
  line-height: 1.1875;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
header
  div.modal_container
  div[data-authorization-modal]
  form
  div.form__btns
  input
  + div {
  margin-left: 3.125rem;
}
/* ... */

